--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "trpc": "node ./node_modules/@trpc/server/dist/cli.cjs generate-tsd"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.14.0",
